<resources>
    <string name="app_name">Swoosh</string>
    <string name="mens">MENS</string>
    <string name="desired_league">Desired League:</string>
    <string name="womens">WOMENS</string>
    <string name="co_ed">Co-ed</string>
    <string name="next">NEXT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="finish">FINISH</string>
    <string name="please_select_league">Please select a league</string>
    <string name="looking_for_a_x_near_you">Looking for a %1$s %2$s league near you…</string>
</resources>
